```mermaid
stateDiagram
  direction TB
  [*] --> Idle
  Idle --> Listening: WAKE_WORD_DETECTED<br>(start session)
  Listening --> Responding: USER_INPUT_RECEIVED
  Listening --> Idle: SESSION_TIMEOUT<br>(end session)
  Listening --> Error: ERROR_OCCURRED
  Responding --> Listening: SPEECH_DONE<br>(continue session)
  Responding --> Listening: SPEECH_INTERRUPTED<br>(continue session)
  Responding --> Idle: SESSION_TIMEOUT<br>(end session)
  Responding --> Error: ERROR_OCCURRED
  Error --> Idle: SPEECH_DONE<br>(end session)
  Error --> Idle: SESSION_TIMEOUT<br>(end session)
  note right of Idle
    Session inactive
    Waiting for wake word
  end note
  note right of Listening
    Session active
    20s timeout timer running
    Waiting for user input
  end note
  note right of Responding
    Session active
    Generating & delivering response
  end note
  note right of Error
    Error handling
    Delivering error message
  end note
```
